Add crypto support and flexible chart sizing for many assets in commercial UI

--- a/commercial-add-assets.html
+++ b/commercial-add-assets.html
@@ -24,7 +24,7 @@
   </div>
 
 <script>
-function cls(t){ if(['IVV','SCHD'].includes(t)) return 'ETF EUA'; return t.endsWith('11')&&t.length>=6?'FII':'AÇÃO'; }
+function cls(t){ if(['IVV','SCHD'].includes(t)) return 'ETF EUA'; if(['BTC','ETH','SOL','XRP','BNB','ADA','DOGE','LTC','USDT'].includes(t)) return 'CRIPTO'; return t.endsWith('11')&&t.length>=6?'FII':'AÇÃO'; }
 function parse(text){
   const up=text.toUpperCase().replace(/[\n\t;,]+/g,' ');
   const re=/\b([A-Z]{2,6}\d{0,2})\b\s+(\d{1,7})\b/g;
