--- a/commercial-dashboard.html
+++ b/commercial-dashboard.html
@@ -86,14 +86,14 @@
     <div class="card">
       <div class="muted">Ativos monitorados</div>
       <div class="kpi" id="kCount">0</div>
-      <div class="muted">FIIs + Ações na carteira</div>
+      <div class="muted">Ativos na carteira</div>
     </div>
   </div>
 
   <div class="grid two" style="margin-top:14px;">
     <div class="card">
       <h3>Alocação por bloco (barras horizontais)</h3>
-      <div style="max-width:520px;"><canvas id="allocChart" height="150"></canvas></div>
+      <div id="chartWrap" style="max-width:540px; max-height:320px; overflow:auto; border:1px solid #233565; border-radius:10px; padding:8px;"><canvas id="allocChart" height="180"></canvas></div>
       <div class="muted" style="margin-top:8px;text-align:center">Visual em barras para leitura mais clara</div>
     </div>
     <div class="card">
@@ -135,15 +135,15 @@
   </div>
 
   <div class="card" style="margin-top:14px;">
-    <h3>Painel de decisão instantânea (P/VP)</h3>
-    <div class="muted">Botão automático busca múltiplos no Investidor10 e responde se deve comprar ou não.</div>
+    <h3>Painel de decisão instantânea (FII/Ações/Cripto)</h3>
+    <div class="muted">Botão automático busca múltiplos no Investidor10 e responde se deve comprar ou não, com regra específica por classe.</div>
     <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap;margin:8px 0;">
       <button id="refreshBtn">Atualizar P/VP automático</button>
       <span id="status" class="muted">Aguardando atualização.</span>
       <span id="mode" class="muted"></span>
     </div>
     <table>
-      <thead><tr><th>Ativo</th><th>Classe</th><th>P/VP atual</th><th>Decisão</th><th>Motivo</th></tr></thead>
+      <thead><tr><th>Ativo</th><th>Classe</th><th>Métrica atual</th><th>Decisão</th><th>Motivo</th></tr></thead>
       <tbody id="decisionRows"></tbody>
     </table>
   </div>
@@ -156,6 +156,10 @@ const DEFAULT_PORT=[
   {ticker:'PETR4', qty:30, cls:'AÇÃO'},
   {ticker:'WEGE3', qty:12, cls:'AÇÃO'},
 ];
+
+
+const CRYPTO_SET = new Set(['BTC','ETH','SOL','XRP','BNB','ADA','DOGE','LTC','USDT']);
+const CRYPTO_MAP = { BTC:'bitcoin', ETH:'ethereum', SOL:'solana', XRP:'ripple', BNB:'binancecoin', ADA:'cardano', DOGE:'dogecoin', LTC:'litecoin', USDT:'tether' };
 
 const rules = {
   FII:{g:0.90,y:1.00},
@@ -188,10 +192,16 @@ function loadPortfolio(){
   return DEFAULT_PORT.slice();
 }
 
-function classify(t){ return t.endsWith('11') ? 'FII' : 'AÇÃO'; }
+function classify(t){ if (CRYPTO_SET.has(t)) return 'CRIPTO'; if (['IVV','SCHD'].includes(t)) return 'ETF EUA'; return t.endsWith('11') ? 'FII' : 'AÇÃO'; }
 
 function signal(asset, v){
   if (v == null) return ['AGUARDANDO', 'd-hold'];
+  if (asset.cls === 'CRIPTO') {
+    // v = variação 24h (%). Queda forte = oportunidade, alta forte = evitar topo.
+    if (v <= -4) return ['🟢 COMPRAR FORTE','d-buy'];
+    if (v <= 2) return ['🟡 COMPRAR NORMAL','d-hold'];
+    return ['🔴 EVITAR AGORA','d-avoid'];
+  }
   const custom = rules[asset.ticker];
   const base = custom || (asset.cls==='FII' ? rules.FII : rules.ACAO);
   if (v <= base.g) return ['🟢 COMPRAR FORTE','d-buy'];
@@ -201,14 +211,29 @@ function signal(asset, v){
 
 function reason(asset){
   if (asset.cls==='FII') return 'Faixa P/VP de desconto melhora retorno do reinvestimento.';
+  if (asset.cls==='CRIPTO') return 'Regra por variação 24h: queda forte favorece aporte; alta forte pede cautela.';
+  if (asset.cls==='ETF EUA') return 'ETF global: usar múltiplo com disciplina evita comprar esticado.';
   return 'P/VP baixo aumenta margem de segurança para entrada.';
 }
 
 async function fetchPvp(asset){
   const t = asset.ticker.toLowerCase();
+  if (asset.cls === 'CRIPTO') {
+    const id = CRYPTO_MAP[asset.ticker];
+    if (!id) throw new Error('crypto map nf');
+    const u = `https://api.coingecko.com/api/v3/simple/price?ids=${id}&vs_currencies=usd&include_24hr_change=true`;
+    const r = await fetch(u);
+    if (!r.ok) throw new Error('crypto fetch fail');
+    const j = await r.json();
+    const ch = j?.[id]?.usd_24h_change;
+    if (typeof ch !== 'number') throw new Error('crypto metric nf');
+    return ch; // variação 24h
+  }
   const url = asset.cls==='FII'
     ? `https://r.jina.ai/http://investidor10.com.br/fiis/${t}/`
-    : `https://r.jina.ai/http://investidor10.com.br/acoes/${t}/`;
+    : (asset.cls==='ETF EUA'
+      ? `https://r.jina.ai/http://investidor10.com.br/etfs-global/${t}/`
+      : `https://r.jina.ai/http://investidor10.com.br/acoes/${t}/`);
   const res = await fetch(url);
   if (!res.ok) throw new Error('fetch fail');
   const txt = await res.text();
@@ -237,7 +262,7 @@ function render(){
     const v = metrics[a.ticker];
     const [txt, cls] = signal(a,v);
     const tr2=document.createElement('tr');
-    tr2.innerHTML=`<td><strong>${a.ticker}</strong></td><td>${a.cls}</td><td>${v!=null?v.toFixed(2):'-'}</td><td><span class="decision ${cls}">${txt}</span></td><td>${reason(a)}</td>`;
+    tr2.innerHTML=`<td><strong>${a.ticker}</strong></td><td>${a.cls}</td><td>${v!=null?(a.cls==='CRIPTO'?`${v.toFixed(2)}% (24h)`:v.toFixed(2)):'-'}</td><td><span class="decision ${cls}">${txt}</span></td><td>${reason(a)}</td>`;
     dec.appendChild(tr2);
   });
   updateSummary();
@@ -266,6 +291,10 @@ const priceRef = {
 
 function estimateValue(asset){
   const ref = priceRef[asset.ticker] || 20;
+  if (asset.cls==='CRIPTO') {
+    const usdRef = {BTC:98000, ETH:3200, SOL:180, XRP:0.6, BNB:650, ADA:0.8, DOGE:0.12, LTC:90, USDT:1};
+    return asset.qty * (usdRef[asset.ticker] || 1) * 5.2;
+  }
   return asset.qty * ref;
 }
 
@@ -289,6 +318,8 @@ function updateSummary(){
   byTicker.sort((a,b)=>b.value-a.value);
   const labels = byTicker.map(x=>x.label);
   const data = byTicker.map(x=>x.value);
+  const c = document.getElementById('allocChart');
+  c.height = Math.max(160, labels.length * 34);
 
   if (!allocChart){
     allocChart = new Chart(document.getElementById('allocChart'), {
