--- a/commercial-dashboard.html
+++ b/commercial-dashboard.html
@@ -93,7 +93,7 @@
   <div class="grid" style="margin-top:14px;">
     <div class="card">
       <h3>Alocação por bloco (barras horizontais)</h3>
-      <div id="chartWrap" style="max-width:1100px; max-height:520px; overflow:auto; border:1px solid #233565; border-radius:10px; padding:8px;"><canvas id="allocChart" height="240"></canvas></div>
+      <div id="chartWrap" style="width:100%; max-width:100%; height:260px; overflow:auto; border:1px solid #233565; border-radius:10px; padding:8px;"><canvas id="allocChart" height="180"></canvas></div>
       <div class="muted" style="margin-top:8px;text-align:center">Visual em barras para leitura mais clara</div>
     </div>
   </div>
@@ -309,7 +309,7 @@ function updateSummary(){
   const labels = byTicker.map(x=>x.label);
   const data = byTicker.map(x=>x.value);
   const c = document.getElementById('allocChart');
-  c.height = Math.max(220, labels.length * 42);
+  c.height = Math.max(180, labels.length * 30);
 
   if (!allocChart){
     allocChart = new Chart(document.getElementById('allocChart'), {
