--- a/commercial-add-assets.html
+++ b/commercial-add-assets.html
@@ -27,7 +27,8 @@
 function norm(t){ return t==='BITCOIN' ? 'BTC' : t; }
 function cls(t){ t=norm(t); if(['IVV','SCHD'].includes(t)) return 'ETF EUA'; if(['BTC','BITCOIN','ETH','SOL','XRP','BNB','ADA','DOGE','LTC','USDT'].includes(t)) return 'CRIPTO'; return t.endsWith('11')&&t.length>=6?'FII':'AÇÃO'; }
 function parse(text){
-  const up=text.toUpperCase().replace(/[\n\t;,]+/g,' ');
+  // NÃO remover vírgula: ela pode ser decimal (ex.: BTC 0,89)
+  const up=text.toUpperCase().replace(/[\n\t;]+/g,' ');
   const re=/\b([A-Z]{2,10}\d{0,2})\b\s+(\d{1,7}(?:[\.,]\d+)?)\b/g;
   const map=new Map(); let m;
   while((m=re.exec(up))!==null){ let t=m[1],q=Number(String(m[2]).replace(',', '.')); if(!q) continue; t=norm(t); map.set(t,(map.get(t)||0)+q); }
