--- a/commercial-dashboard.html
+++ b/commercial-dashboard.html
@@ -206,12 +206,16 @@ function reason(asset){
   return 'P/VP baixo aumenta margem de segurança para entrada.';
 }
 
+function withTimeout(promise, ms=12000){
+  return Promise.race([promise, new Promise((_,rej)=>setTimeout(()=>rej(new Error('timeout')), ms))]);
+}
+
 async function fetchPvp(asset){
   const t = asset.ticker.toLowerCase();
   if (asset.cls === 'CRIPTO') {
     const id = CRYPTO_MAP[asset.ticker];
     if (!id) throw new Error('crypto map nf');
-    const u = `https://api.coingecko.com/api/v3/simple/price?ids=${id}&vs_currencies=usd&include_24hr_change=true`;
+    const u = `https://api.coingecko.com/api/v3/simple/price?ids=${id}&vs_currencies=usd&include_24hr_change=true&_=${Date.now()}`;
     const r = await fetch(u);
     if (!r.ok) throw new Error('crypto fetch fail');
     const j = await r.json();
@@ -224,7 +228,7 @@ async function fetchPvp(asset){
     : (asset.cls==='ETF EUA'
       ? `https://r.jina.ai/http://investidor10.com.br/etfs-global/${t}/`
       : `https://r.jina.ai/http://investidor10.com.br/acoes/${t}/`);
-  const res = await fetch(url);
+  const res = await withTimeout(fetch(url + (url.includes("?")?"&":"?") + "_=" + Date.now(), { cache: "no-store" }), 12000);
   if (!res.ok) throw new Error('fetch fail');
   const txt = await res.text();
   let m = txt.match(/P\/VP\s*([0-9]+,[0-9]+)/i) || txt.match(/P\/VP[^0-9]*([0-9]+,[0-9]+)/i);
@@ -260,12 +264,15 @@ function render(){
 
 async function refresh(){
   let ok=0, fail=0;
+  const btn = document.getElementById('refreshBtn');
+  btn.disabled = true;
   document.getElementById('status').textContent='Atualizando...';
-  for (const a of portfolio) {
+  await Promise.allSettled(portfolio.map(async (a)=>{
     try { metrics[a.ticker] = await fetchPvp(a); ok++; }
     catch { fail++; }
-  }
+  }));
   document.getElementById('status').textContent=`Atualização concluída: ${ok} ativos atualizados, ${fail} falhas.`;
+  btn.disabled = false;
   render();
 }
 
