--- a/commercial-auth.html
+++ b/commercial-auth.html
@@ -2,51 +2,77 @@
 <html lang="pt-BR"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Premium</title>
 <style>
 body{margin:0;background:#0b1020;color:#e8edff;font-family:Inter,Segoe UI,Arial;padding:20px}
-.card{background:#121a33;border:1px solid #2b3d72;border-radius:14px;padding:14px;max-width:520px}
+.card{background:#121a33;border:1px solid #2b3d72;border-radius:14px;padding:14px;max-width:620px}
 input{width:100%;padding:9px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
 button{background:#1b2d5e;color:#fff;border:1px solid #3d58a6;border-radius:9px;padding:8px 12px;cursor:pointer}
 .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}.muted{color:#9aa7d8}
 </style></head><body>
 <h1 style="margin-top:0">Cadastro/Login Premium</h1>
 <div class="card">
-  <div class="muted">Demo comercial: acesso premium só após confirmação de pagamento.</div>
+  <div class="muted">Fluxo local de teste: cadastro com e-mail + senha, verificação por contra senha (código de 6 dígitos).</div>
   <input id="email" placeholder="E-mail"/>
-  <input id="pass" type="password" placeholder="Senha"/>
-  <label class="row"><input id="paid" type="checkbox" style="width:auto"/> Confirmo que o pagamento foi realizado</label>
+  <input id="pass" type="password" placeholder="Senha (mínimo 6 caracteres)"/>
+  <input id="code" placeholder="Contra senha (código de verificação)"/>
+
+  <label class="row"><input id="paid" type="checkbox" style="width:auto"/> Confirmo pagamento (simulação para teste)</label>
+
   <div class="row" style="margin-top:10px;">
-    <button id="register">Cadastrar + liberar premium</button>
-    <button id="login">Entrar</button>
+    <button id="register">1) Cadastrar e gerar código</button>
+    <button id="verify">2) Confirmar código</button>
+    <button id="login">3) Entrar</button>
     <button onclick="location.href='commercial-dashboard.html'">Voltar</button>
   </div>
   <div id="status" class="muted" style="margin-top:10px;"></div>
 </div>
 <script>
-const USERS='premiumUsers', SESSION='premiumSession';
-function getUsers(){return JSON.parse(localStorage.getItem(USERS)||'{}')}
-function setUsers(u){localStorage.setItem(USERS,JSON.stringify(u))}
-
+const API = `http://${location.hostname}:3001`;
+const statusEl=document.getElementById('status');
 const emailEl=document.getElementById('email');
 const passEl=document.getElementById('pass');
+const codeEl=document.getElementById('code');
 const paidEl=document.getElementById('paid');
-const statusEl=document.getElementById('status');
 
-document.getElementById('register').onclick=()=>{
-  const email=emailEl.value.trim().toLowerCase(), pass=passEl.value;
-  if(!email||!pass) return statusEl.textContent='Preencha e-mail e senha.';
-  if(!paidEl.checked) return statusEl.textContent='Pagamento não confirmado. Premium bloqueado.';
-  const u=getUsers();
-  u[email]=u[email]||{}; u[email].pass=pass; u[email].premium=true; u[email].portfolio=u[email].portfolio||[];
-  setUsers(u); localStorage.setItem(SESSION,JSON.stringify({email}));
-  statusEl.textContent='Premium liberado. Redirecionando...'; setTimeout(()=>location.href='commercial-dashboard.html',700);
+async function api(path, method='GET', body){
+  const r = await fetch(API+path, {
+    method,
+    headers: {'Content-Type':'application/json'},
+    credentials: 'include',
+    body: body ? JSON.stringify(body) : undefined,
+  });
+  let j={}; try{ j=await r.json(); }catch{}
+  if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
+  return j;
+}
+
+document.getElementById('register').onclick = async ()=>{
+  const email=emailEl.value.trim().toLowerCase();
+  const password=passEl.value;
+  if(!email || password.length<6){ statusEl.textContent='Preencha e-mail e senha válida.'; return; }
+  if(!paidEl.checked){ statusEl.textContent='Marque confirmação de pagamento (simulação).'; return; }
+  try{
+    const j = await api('/auth/register','POST',{email,password});
+    statusEl.textContent = `Cadastro iniciado. Código dev: ${j.devCode} (copie e confirme no campo "Contra senha").`;
+  }catch(e){ statusEl.textContent = `Erro no cadastro: ${e.message}`; }
 };
 
-document.getElementById('login').onclick=()=>{
-  const email=emailEl.value.trim().toLowerCase(), pass=passEl.value;
-  const u=getUsers();
-  if(!u[email]||u[email].pass!==pass) return statusEl.textContent='Credenciais inválidas.';
-  if(!u[email].premium) return statusEl.textContent='Conta sem premium ativo.';
-  localStorage.setItem(SESSION,JSON.stringify({email}));
-  statusEl.textContent='Login OK. Redirecionando...'; setTimeout(()=>location.href='commercial-dashboard.html',700);
+document.getElementById('verify').onclick = async ()=>{
+  const email=emailEl.value.trim().toLowerCase();
+  const code=codeEl.value.trim();
+  if(!email||!code){ statusEl.textContent='Informe e-mail e contra senha.'; return; }
+  try{
+    await api('/auth/verify','POST',{email,code});
+    statusEl.textContent = 'E-mail confirmado com sucesso. Agora clique em Entrar.';
+  }catch(e){ statusEl.textContent = `Erro na confirmação: ${e.message}`; }
+};
+
+document.getElementById('login').onclick = async ()=>{
+  const email=emailEl.value.trim().toLowerCase();
+  const password=passEl.value;
+  try{
+    await api('/auth/login','POST',{email,password});
+    statusEl.textContent = 'Login OK. Redirecionando...';
+    setTimeout(()=>location.href='commercial-dashboard.html',700);
+  }catch(e){ statusEl.textContent = `Erro no login: ${e.message}`; }
 };
 </script>
 </body></html>
